--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+beautifulsoup4==4.7.1
+bs4==0.0.1
 build==1.0.2
 cachetools==3.0.0
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
+fake-useragent==0.1.11
 Flask==1.0.2
 google-api-python-client==1.7.7
 google-auth==1.6.2
@@ -11,14 +14,18 @@ httplib2==0.12.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
+lxml==4.3.0
 MarkupSafe==1.1.0
+pathlib==1.0.1
 pyasn1==0.4.5
 pyasn1-modules==0.2.3
 pyTelegramBotAPI==3.6.6
 requests==2.21.0
 rsa==4.0
+selenium==3.141.0
 simplejson==3.16.0
 six==1.12.0
+soupsieve==1.7.1
 uritemplate==3.0.0
 urllib3==1.24.1
 Werkzeug==0.14.1
